[fix] #122 제출 이력 조회 API 수정
Response 요구사항 맞춰서 수정하였습니다.